fix scrolling issue on mobile device view size

--- a/doggy_dates/static/css/styles.css
+++ b/doggy_dates/static/css/styles.css
@@ -103,3 +103,6 @@ body {
     width: 200px;
     border: 1px solid #dbdbdb;
 }
+.container {
+    overflow: scroll;
+}
